[package]
name = "rustlings"
version = "4.5.1"
authors = ["anastasie <ana@ana.st>", "Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
edition = "2018"

[dependencies]
argh = "0.1.4"
indicatif = "0.10.3"
console = "0.7.7"
notify = "4.0.15"
toml = "0.4.10"
regex = "1.1.6"
serde = {version = "1.0.10", features = ["derive"]}
my-crate = { version = "0.1.0", registry = "cloudsmith-test-ciara-repo1" }

[registries.cloudsmith-test-ciara-repo1]
index = "https://dl.cloudsmith.xyz/JUpHuiMbgQ0njQGh/ciara-repo1/cargo/index.git"

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.1"
glob = "0.3.0"


